# notify

./: .gitignore  Application.hs  Foundation.hs  Main.hs  README.md  client_session_key.aes  d  routes  whatever-news.cabal
Handler/: Categoria.hs  Comentario.hs  Jornalista.hs  Noticia.hs  Principal.hs
Static/julius/: principal.js
Static/lucius/: main.lucius
Templates/: footer.hamlet  header.hamlet  nav.hamlet  navJornalista.hamlet  noticiaCorpo.hamlet  noticiaTodas.hamlet  perfil.hamlet  principal.hamlet
