name:               whatever-news
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          whatever-news
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Add
                    Handler.Principal

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
