name:               whatever-news
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          whatever-news
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handler.Principal
                    Handler.Categoria
                    Handler.Comentario
                    Handler.Jornalista
                    Handler.Noticia

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , yesod-form
                , text
                , persistent                    
                , persistent-postgresql
                , monad-logger
                , bytestring
                , filepath
                , shakespeare
                , time

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
